--- a/templates/managements.html
+++ b/templates/managements.html
@@ -29,9 +29,10 @@
         <h2 class="title-color">Our Management Team</h2>
         <p class="text-muted">Meet the dedicated professionals who lead our hospital with care and excellence.</p>
       </div>
-      <div class="row justify-content-center">
-        <!-- Card 1 -->
-        <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-4">
+
+      <!-- Row 1: Chairman Centered -->
+      <div class="row justify-content-center mb-4">
+        <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-4">
           <div class="card border-0 shadow rounded text-center w-100">
             <img src="{% static 'images/chairman.png' %}" class="card-img-top img-fluid" alt="Chairman" />
             <div class="card-body">
@@ -40,7 +41,10 @@
             </div>
           </div>
         </div>
+      </div>
 
+      <!-- Row 2: Other Management Members -->
+      <div class="row justify-content-center">
         <!-- Card 2 -->
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-4">
           <div class="card border-0 shadow rounded text-center w-100">
@@ -55,7 +59,7 @@
         <!-- Card 3 -->
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-4">
           <div class="card border-0 shadow rounded text-center w-100">
-            <img src="{% static 'images/centreheadd.png' %}" class="card-img-top img-fluid" alt="Centre Head" />
+            <img src="{% static 'images/suresh.jpg' %}" class="card-img-top img-fluid" alt="Centre Head" />
             <div class="card-body">
               <h5 class="card-title mb-1">Mr. Suresh Kumar</h5>
               <h4 class="card-title fs-5">Centre Head Kottarakara</h4>
