--- a/templates/base.html
+++ b/templates/base.html
@@ -85,9 +85,9 @@
                   <li>
                     <a class="dropdown-item" href="insurances">Insurance</a>
                   </li>
-                  {% comment %} <li>
-                    <a class="dropdown-item" href="">Optical Shops</a>
-                  </li> {% endcomment %}
+                  <li>
+                    <a class="dropdown-item" href="services">Services</a>
+                  </li>
                 </ul>
               </li>
 
