--- a/templates/base.html
+++ b/templates/base.html
@@ -271,5 +271,6 @@
 
     <script src="static/js/script.js"></script>
     <script src="static/js/contact.js"></script>
+    <script src="static/js/banner.js"></script>
   </body>
 </html>
