--- a/templates/index.html
+++ b/templates/index.html
@@ -5,26 +5,44 @@
 {% endblock %}
 
 {% block content %}
-  <!-- Slider Start -->
-  <section class="banner">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-6 col-md-12 col-xl-7">
-          <div class="block">
-            <div class="divider mb-3"></div>
-            <span class="text-uppercase text-sm letter-spacing">Comprehensive Eye Solutions</span>
-            <h1 class="mb-3 mt-3">Your Vision, Our Priority</h1>
-
-            <p class="mb-4 pr-5">Providing world-class eye hospital with advanced treatments and expert ophthalmologists to ensure clear and healthy vision for everyone.</p>
-            <div class="btn-container">
-              <a href="appoinment" target="_blank" class="btn btn-main-2 btn-icon btn-round-full">Book an Appointment <i class="icofont-simple-right ml-2"></i></a>
-            </div>
+<!-- Slider Start -->
+<section class="banner">
+  <div class="slider-container">
+    <div class="slide active">
+      <img src="static/images/Imagea.jpg" alt="Eye Care 1">
+    </div>
+    <div class="slide">
+      <img src="https://media.istockphoto.com/id/1489731410/photo/digital-vision-eye-care-concept-doctor-using-technology-for-eye-test-vision-checking-eyesight.jpg?s=612x612&w=0&k=20&c=RBVpfwrF1XjNZM6Ur19V7AgdWwM2kiyEE6O5yfGOFN0=" alt="Eye Care 2">
+    </div>
+    <div class="slide">
+      <img src="https://media.istockphoto.com/id/1189207226/photo/female-patient-checking-vision-in-ophthalmological-clinic.jpg?s=612x612&w=0&k=20&c=jgoUMyIj09OnX6lc5FY3KDcheFDZ9zll6uZTHafmmgk=" alt="Eye Care 3">
+    </div>
+  </div>
+  
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6 col-md-12 col-xl-7">
+        <div class="block">
+          <div class="divider mb-3"></div>
+          <span class="text-uppercase text-sm letter-spacing">Comprehensive Eye Solutions</span>
+          <h1 class="mb-3 mt-3">Your Vision, Our Priority</h1>
+          <p class="mb-4 pr-5">Providing world-class eye hospital with advanced treatments and expert ophthalmologists to ensure clear and healthy vision for everyone.</p>
+          <div class="btn-container">
+            <a href="appoinment" target="_blank" class="btn btn-main-2 btn-icon btn-round-full">Book an Appointment <i class="icofont-simple-right ml-2"></i></a>
           </div>
         </div>
       </div>
     </div>
-  </section>
-  <!-- Slider End -->
+  </div>
+
+  <!-- Slider Navigation Dots -->
+  <div class="slider-dots">
+    <span class="dot active" onclick="currentSlide(1)"></span>
+    <span class="dot" onclick="currentSlide(2)"></span>
+    <span class="dot" onclick="currentSlide(3)"></span>
+  </div>
+</section>
+<!-- Slider End -->
 
   <!-- Features Start -->
   <section class="features">
