--- a/templates/about.html
+++ b/templates/about.html
@@ -210,7 +210,7 @@
     </div>
   </section>
 
-  <!-- Start About Us Section -->
+  <!-- Start Government Projects Section -->
   <section class="section clients">
     <div class="container">
       <div class="row justify-content-center">
@@ -224,38 +224,47 @@
       </div>
     </div>
 
-    <!-- Carousel Section -->
+    <!-- Client Logos Grid -->
     <div class="container">
-      <div id="clientCarousel" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <!-- Slide 1 -->
-          <div class="carousel-item active">
-            <div class="row clients-logo justify-content-center">
-              <div class="col-lg-3 col-md-3 col-6">
-                <div class="client-thumb">
-                  <img src="static/images/echs.png" alt="Partner 1" class="img-fluid" />
-                </div>
-              </div>
-              <div class="col-lg-3 col-md-3 col-6">
-                <div class="client-thumb">
-                  <img src="static/images/medisep.png" alt="Partner 2" class="img-fluid" />
-                </div>
-              </div>
-              <div class="col-lg-3 col-md-3 col-6">
-                <div class="client-thumb">
-                  <img src="static/images/cghs.png" alt="Partner 3" class="img-fluid" />
-                </div>
-              </div>
-              <div class="col-lg-3 col-md-3 col-6">
-                <div class="client-thumb">
-                  <img src="static/images/kasp.png" alt="Partner 4" class="img-fluid" />
-                </div>
-              </div>
+      <div class="row clients-logo flex-nowrap flex-md-wrap overflow-x-auto overflow-md-visible pb-3">
+        <!-- Client Items -->
+        <div class="col-lg-3 col-md-3 col-8">
+          <!-- Adjusted column size -->
+          <div class="client-thumb text-center d-flex flex-column align-items-center h-200">
+            <div class="logo-container">
+              <img src="static/images/echs.png" alt="ECHS" class="img-fluid" />
             </div>
+            <div class="logo-label">ECHS</div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-3 col-8">
+          <div class="client-thumb text-center d-flex flex-column align-items-center h-200">
+            <div class="logo-container">
+              <img src="static/images/medisep.png" alt="MEDISEP" class="img-fluid" />
+            </div>
+            <div class="logo-label">MEDISEP</div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-3 col-8">
+          <div class="client-thumb text-center d-flex flex-column align-items-center h-200">
+            <div class="logo-container">
+              <img src="static/images/cghs.png" alt="CGHS" class="img-fluid" />
+            </div>
+            <div class="logo-label">CGHS</div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-3 col-8">
+          <div class="client-thumb text-center d-flex flex-column align-items-center h-200">
+            <div class="logo-container">
+              <img src="static/images/kasp.png" alt="KASP" class="img-fluid" />
+            </div>
+            <div class="logo-label">KASP</div>
           </div>
         </div>
       </div>
     </div>
   </section>
-  <!-- End About Us Section -->
 {% endblock %}
