--- a/templates/managements.html
+++ b/templates/managements.html
@@ -30,14 +30,11 @@
         <p class="text-muted">Meet the dedicated professionals who lead our hospital with care and excellence.</p>
       </div>
 
-      <!-- Row 1: Chairman Centered -->
-      <div class="row justify-content-center mb-4">
+      <!-- Row 1: Chairman Centered --> <div class="row justify-content-center mb-4">
         <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-4">
           <div class="card border-0 shadow rounded text-center w-100">
-            <img src="{% static 'images/chairman.png' %}" class="card-img-top img-fluid" alt="Chairman" />
-            <div class="card-body">
-              <h5 class="card-title mb-1">Mr. Tilly B George</h5>
-              <h4 class="card-title fs-5">Chairman</h4>
+            <img src="{% static 'images/chairman.png' %}" class="card-img-top img-fluid mx-auto" alt="Chairman" style="width: 250px; height: auto; padding-top: 20px;" /> <div class="card-body">
+              <h5 class="card-title mb-1">Mr. Tilly B George</h5> <h4 class="card-title fs-5">Chairman</h4>
             </div>
           </div>
         </div>
