--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-  About | Karunya Eye Hospital
+  About | Karunya Eye care
 {% endblock %}
 
 {% block content %}
@@ -26,18 +26,20 @@
         <div class="col-lg-6 col-sm-12">
           <div class="about-img d-flex flex-column align-items-center">
             <img src="static/images/gallery/17.jpg" alt="" class="img-fluid mb-4" />
+            <img src="static/images/gallery/15.jpg" alt="" class="img-fluid mb-4" />
+            <img src="static/images/gallery/17.jpg" alt="" class="img-fluid mb-4" />
             <img src="static/images/gallery/15.jpg" alt="" class="img-fluid" />
           </div>
         </div>
         <!-- Content Section: 50% Width -->
         <div class="col-lg-6 col-sm-12">
           <div class="about-content pl-4 mt-4 mt-lg-0">
-            <h2 class="title-color">About Karunya Eye Hospital</h2>
-            <p class="mt-4 mb-5">Established in 1985 as K.K. Opticals & Eye Clinic in Adoor, Kerala, by Mr. Tilly B George, a pioneer in optical lenses and accessories, our institution has grown remarkably over 40 years. His vision of a premier eye hospital center became a reality with Karunya Eye Hospital (KEH) in 2008.
-
-              KEH, a NABH-certified specialty eye hospital, is one of the most trusted in Adoor, with modern centers in Pandalam and Kottarakkara. Our eight highly qualified specialists provide advanced ophthalmic care, including cataract, retina, glaucoma, and laser eye surgeries. Thousands of painless MICS cataract surgeries (Phaco) have been successfully performed.
-
-              Our state-of-the-art facilities, experienced specialists, and certified technicians ensure superior eye hospital. Conveniently located, KEH is 95 km from Thiruvananthapuram International Airport and 26 km from the nearest railway station. We remain committed to providing quality eye hospital with continual advancements in technology and expertise.</p>
+            <h2 class="title-color">About Karunya Eye care</h2>
+            <p class="mt-4 mb-5">About Karunya Eye Hospital
+Established in the year 1985 in the name and style as K.K.Opticals & Eye Clinic at Adoor, Pathanamthitta District, Kerala by Mr. Tilly B George, a pioneer in the field of Optical Lens, Frames and its accessories, has achieved remarkable growth for the past 40 years. His commitment, determination, hard work and vision of establishing a “Dream Center” of eye care is now a reality. 
+Karunya Eye Hospital (KEH), the present-day Specialty Eye Care Hospital at Adoor was established in the year 2008. KEH is one of most trusted eye care hospitals in Adoor, Pathanamthitta District, Kerala State (India), committed to providing quality eye care and treatment of eye disorders to all sections of society. Now we have Three most modern Centres at Adoor, Pandalam and Kottarakkara, offers all ophthalmic specialities, serving hundreds of patients every day. We have Eight highly qualified and dedicated Eye Specialists & surgeons, who provide a wide range of speciality ophthalmic care. Our team of doctors provide Compassionate and comprehensive treatments to all patients visiting our Centres.  KEH’s state-of-the art facilities, latest treatment techniques, highly experienced eye specialists, competent staff, and certified technicians allow us to provide superior eye care for patients and attain the best possible results. 
+A NABH Certified Eye Hospital, we are committed to providing the best services in eye care through continual improvements of our systems, process, technology, and through the employment of dedicated and competent professionals of a progressive mindset.  We offer the most advanced Eye Care Treatment. We combine the expertise of our team of Eye Surgeons, highly experienced in their specialties of Cataract, Retina, Glaucoma, Laser Eye Surgeries etc. Thousands of most advanced Painless MICS Cataract Surgeries (Phaco) have been performed in our Centres.  
+KEH is conveniently located with easy access by road, rail and air. Thiruvananthapuram International Airport is only 95 km away and the nearest railway station is only 26 km away from the hospital. The district headquarters, Pathanamthitta is also only 18 Kms away from the hospital. Main Central (MC) Road is passing through Adoor.</p>
 
             <a href="about" class="btn btn-main-2 btn-round-full btn-icon">Know more<i class="icofont-simple-right ml-3"></i></a>
           </div>
@@ -49,7 +51,7 @@
 
   <section class="feature-page">
     <div class="container">
-      <h2 class="text-center mb-5 title-color">Why Choose Karunya Eye Hospital?</h2>
+      <h2 class="text-center mb-5 title-color">Why Choose Karunya Eye care?</h2>
       <div class="row">
         <div class="col-lg-3 col-md-6">
           <div class="about-block-item mb-5 mb-lg-0">
@@ -68,7 +70,7 @@
         <div class="col-lg-3 col-md-6">
           <div class="about-block-item mb-5 mb-lg-0">
             <img src="static/images/gallery/42 Q.jpg" alt="Affordable Quality Eye hospital" class="img-fluid w-100" />
-            <h4 class="mt-3">Affordable Quality Eye Hospital</h4>
+            <h4 class="mt-3">Affordable Quality Eye care</h4>
             <p>Accredited NABH centers providing high-quality treatment at pocket-friendly prices for all sections of society.</p>
           </div>
         </div>
@@ -86,7 +88,7 @@
   <section>
     <div class="text-center mt-5">
       <h2 class="title-color">QUALITY POLICY</h2>
-      <p class="mt-4 mb-5 justify-text">Karunya Eye Hospital is dedicated to delivering comprehensive, world-class eye hospital in a safe and patient-centered environment. With a strong commitment to quality, professional ethics, and advanced medical expertise, we ensure the highest standards of diagnosis, treatment, and vision care while continuously enhancing patient satisfaction through a robust Quality Management System.</p>
+      <p class="mt-4 mb-5 justify-text">Karunya Eye care is dedicated to delivering comprehensive, world-class eye care in a safe and patient-centered environment. With a strong commitment to quality, professional ethics, and advanced medical expertise, we ensure the highest standards of diagnosis, treatment, and vision care while continuously enhancing patient satisfaction through a robust Quality Management System.</p>
     </div>
   </section>
 
@@ -97,7 +99,7 @@
         <div class="col-lg-4">
           <div class="about-content pr-4 mt-4 mt-lg-0">
             <h2 class="title-color">OUR MISSION</h2>
-            <p class="mt-4 mb-5">To provide quality eye hospital treatment to the people, as per our vision, by establishing as many centres as possible in both inside and outside India.</p>
+            <p class="mt-4 mb-5">To provide quality eye care treatment to the people, as per our vision, by establishing as many centres as possible in both inside and outside India.</p>
             <a href="" class="btn btn-main-2 btn-round-full btn-icon">Learn More<i class="fa-solid fa-angles-right text-white"></i></a>
           </div>
         </div>
@@ -135,7 +137,7 @@
         <div class="col-lg-4">
           <div class="about-content pr-4 mt-4 mt-lg-0">
             <h2 class="title-color">OUR VISION</h2>
-            <p class="mt-4 mb-5">Make available the advanced, higher and technology in the eye hospital treatment to all needy people at affordable costs and accessible locations.</p>
+            <p class="mt-4 mb-5">Make available the advanced, higher and technology in the eye care treatment to all needy people at affordable costs and accessible locations.</p>
             <a href="" class="btn btn-main-2 btn-round-full btn-icon">Learn More<i class="fa-solid fa-angles-right text-white"></i></a>
           </div>
         </div>
@@ -146,7 +148,7 @@
 
   <section>
     <div class="text-center mt-5 approach-section">
-      <h2 class="title-color">OUR APPROACH TO EYE HOSPITAL</h2>
+      <h2 class="title-color">OUR APPROACH TO EYE CARE</h2>
       <div class="row mt-4">
         <!-- Card 1: Care with Compassion -->
         <div class="col-md-4">
@@ -165,7 +167,7 @@
             <img src="static/images/gallery/44 Q.jpg" alt="Integrity and Excellence" class="card-img-top rounded approach-img" />
             <div class="card-body">
               <h4 class="card-title">Integrity and Excellence</h4>
-              <p class="card-text">We work as a team to provide comprehensive eye hospital. We act ethically and take responsibility for everything we do.</p>
+              <p class="card-text">We work as a team to provide comprehensive eye care. We act ethically and take responsibility for everything we do.</p>
             </div>
           </div>
         </div>
@@ -191,7 +193,7 @@
       <div class="quality-list">
         <ul>
           <li>
-            <i class="fa-solid fa-angles-right"></i> Regularly upgrade the quality services provided by the Hospital.
+            <i class="fa-solid fa-angles-right"></i> Regularly upgrade the quality services provided by the care.
           </li>
           <li>
             <i class="fa-solid fa-angles-right"></i> Provide satisfactory customer service through continuous improvements of service quality.
@@ -203,7 +205,7 @@
             <i class="fa-solid fa-angles-right"></i> Continuously explore developments in surgery, medicine, and diagnosis, adopting the latest methods and medicines accordingly.
           </li>
           <li>
-            <i class="fa-solid fa-angles-right"></i> Ensure the availability of adequate resources to sustain and maintain the quality assurance programme of the Hospital and continually improve its effectiveness.
+            <i class="fa-solid fa-angles-right"></i> Ensure the availability of adequate resources to sustain and maintain the quality assurance programme of the care and continually improve its effectiveness.
           </li>
         </ul>
       </div>
@@ -218,7 +220,7 @@
           <div class="section-title text-center">
             <h2>GOVERNMENT PROJECTS</h2>
             <div class="divider mx-auto my-4"></div>
-            <p>We collaborate with leading eye hospital specialists and institutions to bring the best vision care to our patients. Their expertise and commitment help us ensure the highest standards of eye health and treatment.</p>
+            <p>We collaborate with leading eye care specialists and institutions to bring the best vision care to our patients. Their expertise and commitment help us ensure the highest standards of eye health and treatment.</p>
           </div>
         </div>
       </div>
