--- a/templates/doctor.html
+++ b/templates/doctor.html
@@ -113,7 +113,7 @@
           <div class="position-relative doctor-inner-box">
             <div class="doctor-profile">
               <div class="doctor-img">
-                <img src="static/images/team/doctor6.png" alt="doctor-image" class="img-fluid w-100" style="height: 250px;"/>
+                <img src="static/images/premi.jpeg" alt="doctor-image" class="img-fluid w-100" style="height: 250px;"/>
               </div>
             </div>
             <div class="content mt-3">
